Fixed the broken z-index bug on navbar from navbar scss

--- a/src/common/components/navbar/_index.scss
+++ b/src/common/components/navbar/_index.scss
@@ -84,7 +84,7 @@
   margin-bottom: 20px;
   position: relative;
   padding: 10px 0;
-  z-index: 2;
+  z-index: 3;
   &:not(.visible-sm) {
     display: none;
   }
