--- a/src/common/components/profile-cover/_index.scss
+++ b/src/common/components/profile-cover/_index.scss
@@ -26,7 +26,7 @@
     position: absolute;
     right: 10px;
     top: 10px;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     align-items: center;
   }
